--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -860,6 +860,13 @@
         "\n",
         "# 5. AIチューター",
         "\n",
+        "* Jupyter環境から言語仕様やコードについての質問ができるAIチュータを組み込んでいる\n",
+        "* <font color=\"red\">ただし 2025/07/06 10:00AM 現在, 実際に質問をすると\n",
+        "```\n",
+        "AttributeError: module 'openai' has no attribute 'AzureOpenAI'\n",
+        "```\n",
+        "というエラーが出てしまう(対応お願い中). 授業時間までに直っていることを期待(直らなくても授業後に直ることを期待)</font>\n",
+        "\n",
         "## 5-1. 設定",
         ""
       ]
@@ -907,10 +914,14 @@
         "\n",
         "## 5-2. 質問例",
         "\n",
+        "* `hey, I, C, R` という4つの関数で質問ができる\n",
+        "* `hey` は ChatGPT に投げているのとほぼ同じ意味\n",
+        "\n",
         "* hey(\"omp parallelの文法を教えて\") ... 自由な質問\n",
-        "* I(\"reduction句\") ... あるトピックについて説明\n",
-        "* C(\"omp for\") ... あるトピックに関するコーディング問題を出題\n",
+        "* I(\"collapse句\") ... あるトピックについて説明\n",
+        "* C(\"reduction句\") ... あるトピックに関するコーディング問題を出題\n",
         "* R(\"omp for\") ... あるトピックに関するリーディング問題を出題\n",
+        "* D(\"omp target\") ... あるトピックに関するデバッグ問題を出題\n",
         "\n",
         "以下のコメント # を外していくつか実行してみよ"
       ]
@@ -950,7 +961,7 @@
       },
       "source": [
         "# 説明\n",
-        "# I(\"reduction句\")"
+        "# I(\"collapse句\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -970,7 +981,7 @@
       },
       "source": [
         "# コーディング問題\n",
-        "# C(\"omp for\")"
+        "# C(\"reduction句\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -1010,7 +1021,7 @@
       },
       "source": [
         "# デバッグ問題\n",
-        "# R(\"omp for\")"
+        "# D(\"omp target\")"
       ],
       "execution_count": null,
       "outputs": []
