--- a/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
+++ b/01jupyter/notebooks/source/cs00/cs00_intro.py.ipynb
@@ -861,11 +861,14 @@
         "# 5. AIチューター",
         "\n",
         "* Jupyter環境から言語仕様やコードについての質問ができるAIチュータを組み込んでいる\n",
-        "* <font color=\"red\">ただし 2025/07/06 10:00AM 現在, 実際に質問をすると\n",
+        "* <font color=\"red\">ただし 2025/07/06 10:00AM 現在, 実際に質問をすると</font>\n",
         "```\n",
         "AttributeError: module 'openai' has no attribute 'AzureOpenAI'\n",
         "```\n",
-        "というエラーが出てしまう(対応お願い中). 授業時間までに直っていることを期待(直らなくても授業後に直ることを期待)</font>\n",
+        "<font color=\"red\">というエラーが出てしまう(対応お願い中). 授業時間までに直っていることを期待(直らなくても授業後に直ることを期待)</font>\n",
+        "* 安易に何でもAIに聞いて済ませるのがよいわけではないが, あらゆる角度から質問でき, すぐに答えが返ってくるのがAIの利点なので活用されたい\n",
+        "  * よくない質問の仕方: 「この(演習)問題の答え教えて」\n",
+        "  * よい質問の仕方: 「◯◯について基本から教えて」「C言語で ... は何のこと?」etc.\n",
         "\n",
         "## 5-1. 設定",
         ""
@@ -887,10 +890,11 @@
       "source": [
         "import sys\n",
         "ta_paths = [\"/work/gt47/share/taura/ai-tutor-hey\",\n",
-        "            \"/work/gt47/share/taura/ai-tutor-hey/ex\"]\n",
+        "            \"/work/gt47/share/taura/ai-tutor-hey/ex\",\n",
+        "            \"/work/opt/local/x86_64/cores/openai/lib/python3.9/site-packages\"]\n",
         "for path in ta_paths:\n",
         "  if path not in sys.path:\n",
-        "    sys.path.append(path)\n",
+        "    sys.path.insert(0, path)\n",
         "from heytutor import hey, I, C, R, D, config\n",
         "import openmp_cfg"
       ],
@@ -914,7 +918,7 @@
         "\n",
         "## 5-2. 質問例",
         "\n",
-        "* `hey, I, C, R` という4つの関数で質問ができる\n",
+        "* `hey, I, C, R, D` という5つの関数で質問ができる\n",
         "* `hey` は ChatGPT に投げているのとほぼ同じ意味\n",
         "\n",
         "* hey(\"omp parallelの文法を教えて\") ... 自由な質問\n",
