--- a/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.py.ipynb
+++ b/01jupyter/notebooks/source/cs05/cs05_omp_integral_simd_ilp_mp.py.ipynb
@@ -99,7 +99,7 @@
       },
       "source": [
         "\n",
-        "## 1-2. ジョブ投入を簡便に行うスクリプト",
+        "## 1-2. ジョブ投入を簡便に行う設定",
         ""
       ]
     },
@@ -141,7 +141,142 @@
       },
       "source": [
         "\n",
-        "# 2. 1/8球の体積 を求めるプログラム (SIMD + ILP + マルチコア)",
+        "# 2. AIチューター設定",
+        "\n",
+        "* <font color=\"red\">ただし 2025/07/06 10:00AM 現在, 実際に質問をすると</font>\n",
+        "```\n",
+        "AttributeError: module 'openai' has no attribute 'AzureOpenAI'\n",
+        "```\n",
+        "<font color=\"red\">というエラーが出てしまう(対応お願い中). 授業時間までに直っていることを期待(直らなくても授業後に直ることを期待)</font>\n",
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-007",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "import sys\n",
+        "ta_paths = [\"/work/gt47/share/taura/ai-tutor-hey\",\n",
+        "            \"/work/gt47/share/taura/ai-tutor-hey/ex\",\n",
+        "            \"/work/opt/local/x86_64/cores/openai/lib/python3.9/site-packages\"]\n",
+        "for path in ta_paths:\n",
+        "  if path not in sys.path:\n",
+        "    sys.path.insert(0, path)\n",
+        "from heytutor import hey, I, C, R, D, config\n",
+        "import openmp_cfg"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-008",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "\n",
+        "## 2-1. 質問例",
+        "\n",
+        "* `hey, I, C, R, D` という5つの関数で質問ができる\n",
+        "* `hey` は ChatGPT に投げているのとほぼ同じ意味\n",
+        "\n",
+        "* hey(\"omp parallelの文法を教えて\") ... 自由な質問\n",
+        "  * Pythonセルの先頭に `%%hey_` と書いて実行するとそのセルの内容を `hey`に渡すのと同じ\n",
+        "* I(\"collapse句\") ... あるトピックについて説明\n",
+        "* C(\"reduction句\") ... あるトピックに関するコーディング問題を出題\n",
+        "* R(\"omp for\") ... あるトピックに関するリーディング問題を出題\n",
+        "* D(\"omp target\") ... あるトピックに関するデバッグ問題を出題\n",
+        "\n",
+        "* 質問例"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-009",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "# 自由質問\n",
+        "# hey(\"omp parallelの文法を教えて\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-010",
+          "locked": false,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "%%hey_\n",
+        "\n",
+        "// どこが間違い?\n",
+        "\n",
+        "double int_inv_1_x2(double a, double b, long n) {\n",
+        "  double s = 0.0;\n",
+        "  double dx = (b - a) / (double)n;\n",
+        "#pragma omp parallel for\n",
+        "  for (long i = 0; i < n; i++) {\n",
+        "    double x = a + i * dx;\n",
+        "    s += 1 / (1 + x * x);\n",
+        "  }\n",
+        "  return s * dx;\n",
+        "}\n",
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "kernel": "Python 3 (ipykernel)",
+        "nbgrader": {
+          "grade": false,
+          "grade_id": "c-011",
+          "locked": true,
+          "schema_version": 3,
+          "solution": false,
+          "task": false
+        }
+      },
+      "source": [
+        "\n",
+        "# 3. 1/8球の体積 を求めるプログラム (SIMD + ILP + マルチコア)",
         ""
       ]
     },
@@ -151,7 +286,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-007",
+          "grade_id": "c-012",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -172,7 +307,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-008",
+          "grade_id": "c-013",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -243,7 +378,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-009",
+          "grade_id": "c-014",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -265,7 +400,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-010",
+          "grade_id": "c-015",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -285,7 +420,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-011",
+          "grade_id": "c-016",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -302,7 +437,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-012",
+          "grade_id": "c-017",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -322,7 +457,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-013",
+          "grade_id": "c-018",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -339,7 +474,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-014",
+          "grade_id": "c-019",
           "locked": false,
           "schema_version": 3,
           "solution": false,
@@ -365,7 +500,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-015",
+          "grade_id": "c-020",
           "locked": true,
           "schema_version": 3,
           "solution": false,
@@ -383,7 +518,7 @@
         "kernel": "Python 3 (ipykernel)",
         "nbgrader": {
           "grade": false,
-          "grade_id": "c-016",
+          "grade_id": "c-021",
           "locked": false,
           "schema_version": 3,
           "solution": false,
